# accelerated-intelligent-document-processing-on-aws

./: .clinerules  .gitignore  .gitlab-ci.yml  .mcp.json  .secrets.baseline  ADAPTIVE_EXTRACTION_GUIDE.md  CHANGELOG.md  CLAUDE.md  CONFIG_RECOMMENDATIONS.md  CONTRIBUTING.md  Dockerfile.optimized  EXTRACTION_ROBUSTNESS_SUMMARY.md  Makefile  README.md  RJ_Agentic_LLM_ParseTool.yaml  THRESHOLD_UPDATES_SUMMARY.md  VERSION  capacity-planning-pattern2-only-updates.md  config_adaptive_table_extraction.yaml  config_test_brokerage.yaml  pr-description.md  publish.py  publish.sh  pyrightconfig.json  ruff.toml  template.yaml
config_library/: README.md  finetuning_models.yaml  pricing.yaml
docs/: README.md  agent-analysis.md  agent-companion-chat.md  alb-hosting.md  architecture.md  artifactory-dependency-workaround.md  assessment-bounding-boxes.md  assessment.md  aws-services-and-roles.md  capacity-planning.md  classification.md  code-intelligence.md  configuration-versions.md  configuration.md  cost-calculator.md  creating-custom-test-sets.md  criteria-validation.md  custom-MCP-agent.md  custom-model-finetuning.md  demo-videos.md  deployment-private-network.md  deployment.md  discovery.md  error-analyzer.md  eu-region-model-support.md  evaluation-enhanced-reporting.md  (+38 more)
docs-site/: astro.config.mjs  package.json  setup.sh  sync-sidebar.mjs
lib/idp_mcp_connector_pkg/: README.md  pyproject.toml
lib/idp_mcp_connector_pkg/idp_mcp_connector/: __init__.py  __main__.py  auth.py  connector.py
lib/idp_mcp_connector_pkg/settings/: cline_mcp_settings.json  kiro_mcp_settings.json
(+712 files in other folders)
